test/success/integration/_succ_expr_value_1.hs
x :: Int
x = 3
main = print x