test/fail/integration/_fail_grammar_let_block_imper_2.hs
main = do
       let x :: Int
       print jkl